# ChangeLog for dev-libs/geoip
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/geoip/ChangeLog,v 1.141 2012/12/10 10:17:07 pinkbyte Exp $

  10 Dec 2012; Sergey Popov <pinkbyte@gentoo.org> -geoip-1.4.8.ebuild:
  Update manifest, cause upstream change tarballs, remove old revision

  01 Dec 2012; Raúl Porcel <armin76@gentoo.org> geoip-1.4.8-r1.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #441184

  20 Nov 2012; Agostino Sarubbo <ago@gentoo.org> geoip-1.4.8-r1.ebuild:
  Stable for x86, wrt bug #441184

  07 Nov 2012; Jeroen Roovers <jer@gentoo.org> geoip-1.4.8-r1.ebuild:
  Stable for HPPA (bug #441184).

  07 Nov 2012; Anthony G. Basile <blueness@gentoo.org> geoip-1.4.8-r1.ebuild:
  stable arm, bug #441184

  07 Nov 2012; Anthony G. Basile <blueness@gentoo.org> geoip-1.4.8-r1.ebuild:
  stable ppc ppc64, bug #441184

  06 Nov 2012; Sergey Popov <pinkbyte@gentoo.org> geoip-1.4.8-r1.ebuild:
  Fix tests wrt bug #335368. Thanks to Jeroen Roovers for providing patch

  06 Nov 2012; Sergey Popov <pinkbyte@gentoo.org> geoip-1.4.8-r1.ebuild:
  Stable on amd64 wrt bug #441184

  30 Aug 2012; Sergey Popov <pinkbyte@gentoo.org> geoip-1.4.8-r1.ebuild:
  Add GeoIPASNum database to SRC_URI as it is updated by geoipupdate.sh and
  thus should be owned by package manager

  30 Aug 2012; Sergey Popov <pinkbyte@gentoo.org> metadata.xml:
  Fix a typo

*geoip-1.4.8-r1 (30 Aug 2012)

  30 Aug 2012; Sergey Popov <pinkbyte@gentoo.org> +files/geoipupdate-r1.sh,
  +geoip-1.4.8-r1.ebuild:
  New revision, added IPv6 database for cities wrt bug #429932. Thanks to mva

  19 Jun 2012; Jeroen Roovers <jer@gentoo.org> geoip-1.4.8.ebuild:
  Update HOMEPAGE.

  15 May 2012; Jeremy Olexa <darkside@gentoo.org> geoip-1.4.8.ebuild:
  Add prefix keywords and one small offset fix, bug 416019

  27 Nov 2011; Jeroen Roovers <jer@gentoo.org> geoip-1.4.8.ebuild:
  Do not use autotools-utils.eclass (bug #392067).
