@@ -1,9 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX geoipupdate-r1.sh 746 SHA256 fec9ee8ee72c3d8479c0281005543e69b46993a268657c86f271892da0457cfe SHA512 53e88072a7321d969aeb757e83ce996182e58501d6fa3089ef08695d4fd9d43efd5955ef800215fc2e96529b35d66ed82413e70f11bd5e497b6043ad1646e090 WHIRLPOOL b6df41f0ebab45258c6b50fa0ed25588636514e6dcdeb367260519a3703b72ebcdfb9c69dcdb084dc68f49544e3b38bebeeeb007d91ebe49f79ec5d5436b8718
-AUX geoipupdate.sh 713 SHA256 a7ba219827a708dcc8288275a9dc27fbf6995d147d09012105bac08586a0c0a3 SHA512 8798cf81c385598f32bd36c12c1e356309fcef07e64c5ead74c7562b30ebbda6768f98777f6a2c680d16e4b787bd9eb3c48934edcf0b72db6848746500955250 WHIRLPOOL 1df3c8c9fd9e5e16ad80a42f3726d789fa24d3c7fdec5d982fe444bf66c97b9d9ffde4de161d2dea491b22a996e065bd56f2132e64403eb2794a7d021232193d
+AUX geoipupdate-r2.sh 780 SHA256 a6f38ba414225a14a615e32367a84c18670e96f669cc55ec183eeec5d641ee57 SHA512 5614b1530420ba0fb7ec26762e0ee15d0cc84837d96c068e3ef45d3b08b111fd59c307251da3497ea1136f42398c58cd749f63a01ed71314af241e87cada3fa0 WHIRLPOOL 02aa4949ae06be35a27c65b562d6defbc2329d848c38fb279cdefaa945c5dba9de61ad7573af6f5637d5e05da829faf79831b10983661a4ed262cea3f688e313
 DIST GeoIP-1.4.8.tar.gz 1074829 SHA256 cf0f6b2bac1153e34d6ef55ee3851479b347d2b5c191fda8ff6a51fab5291ff4 SHA512 aec70bdf002f1041ecb14f091e32206af033dc6ed89d20dffcc80e4c4edad993c9dfab7810576cb75f07d356ef34529ca3f2613e43e7f97c2b7ae099ce3be317 WHIRLPOOL 3dcaa7ef9610ede593b64a7a0f111adc0b2f9c4bf64054ef4f690d284a8c7ba45083d2739585047db18e3c22b50b026c9b5fee26142a4611af7b4092e907ffdf
 DIST GeoIPASNum.dat.gz 1806832 SHA256 5f7bc13a01779c846f4c721f2294a31614b7ffbce35d591367e1fd7498164a10 SHA512 b164f30b5ed08668ec7c5d5ee25354851c16d59a651e56d4a93795f35d27566999fe7c99396471a85430267c0668cc0abb841865174183c212acb7d0e4f99061 WHIRLPOOL 14c569dd5435622ce11cb810fb1bfeefcd150dd2c0ce7797ad97b1323fb95799f5f0470bed462b9568db53e42110cf251186eb82ef85f544a323ef7f810fdf4a
 DIST GeoIPv6.dat.gz 639958 SHA256 b34a630eda040d9717c6a483f05a1dac7d84d52b1ead6a51a4b3d21da42a9115 SHA512 86897024d734ca4c83d5a51f685ed1873a46c288ddf41e75d060db00653a1f76b4d60655d109b0ae5fd44e097f54eaec03356b41830c0b9de1991e590bc0eea7 WHIRLPOOL e2a51acb1853dd168e69299bc51eb3a31752c08900f4990f0d3aa72ad14a8f888504288fc1288a0cc69ddeb417fa0fd2d442d018ff894c19c78eb8c232fc5463
 DIST GeoLiteCityv6.dat.gz 12265416 SHA256 c09c3f9140ffb85f3b05fc7820fd1eb708f65e9ba93a07a2c2849e9cdd7a4631 SHA512 4096f3d90e1442c2cb75964cc6af824ced0a647b54a9f422fe5a7a3b9d41693598d587282ac9dac1bc7f36cf4c1761efce86c4ca3ecaebfe25a1b9b7af5c4ec3 WHIRLPOOL eef284562c9d586a95278ab33e897ab50457e79b6a62aa70cb6352540072aabbdf44263a98856094a77760c2792970ee092f8545145f6870fb294c322c8b324b
 EBUILD geoip-1.4.8-r1.ebuild 1924 SHA256 bc3b38c2a0f180df084c7f23dc70be9eebb4c8a383579a8468a829f9909e8afc SHA512 83d764693a69ed983b55c53cc7a1a691ffb9106450fc26e435ceafc28afe2805d6734ae94fd217e7f38efa065f92c424a07820542b4a5b4b51b8993a49ee39af WHIRLPOOL 02e67cf3bd87dfc1487c94f44db31731a6b16e385de19e14acb03f9f77519182faf77bd02cd016e163c3d4128d458f87e77c4e025ae1a3c583535e8aea9e91f1
-MISC ChangeLog 17263 SHA256 4efff353e6b8243aa53ae9535b803ee3612d3ff72747750212084c3654f246d6 SHA512 fb860d5cf913fcb164f102cf050cbbb1cab566d221beeaac7e09cc1354f4b40de9dba0ed1495f11c7db8d577fd055164c55d7f3d882933432e5da8f33f078f72 WHIRLPOOL 93b12fd40eac5d57148c4c8f04603f2fd7733987f43bb8bb6add58ed16ce396f5cc40bdb71e7f7cf2df4515cf3e0ec339d967219ff78855531874f0af2900479
+EBUILD geoip-1.4.8-r2.ebuild 1923 SHA256 e08273d0384a9628fd2944b2b90b37bf0f1816b748260cb9d0db69d139122afc SHA512 841c790aaf342b40f8507327e4a4f53d8447258d16c7e2ba64c14bcdc0c9cc2c12662c73ac413ac9dc52c7aae638ce1954187c9e1f4086b0a4c691b99535b6c2 WHIRLPOOL 84e8b928252dadb642a66e1800e666e2633358348cdd0d8cfacf957c6230bb3d0f094abe738c532e3da6b46e5437c4b01b57f00c05a2090df2607f3dfee3cf37
+MISC ChangeLog 17497 SHA256 f7d1f953c8389b8bb5a974d369ded561cd2510ebb86ce22bc7ab403f0f9497c0 SHA512 a1333c78446de8ee585eac2ab8f268e8c198510879a48a16c6a9f5dd5e02710febd398f18f448e7f8237682e0b5e5b4840c3173252f5ae32b79acecc7880eec2 WHIRLPOOL 0137ae4596d762665785285ed3f84b83dd2af7b3aa31d7f7ebf0b36cbc9c7dc79e59043a4a1b4633bf6464f00aecb6dd58e84605ba589de53a36ae5355ddba47
 MISC metadata.xml 463 SHA256 ace545d814258ed64e3ad659a0dd0c8f4afb82d5bc76c124fee8f0b70dd4cf7b SHA512 0172b45a1ce45a60be1f2d1929745aa496db2ae01410d5c4d176fee186a5da876663cd9c73120ac94580418a94b0ac9837e98fd7ebaa0b04e9995cda249c24f4 WHIRLPOOL ffa4fade120d298edf0a03742e06d4c27093959b5ebd0e1f4277a25d6ad62f7e080ee67e38e9cfa0b629ecee61e528eeef5a57774303e6862736a289044d8999
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlDIov8ACgkQVWmRsqeSphPwBQCeLWEgVgBRbxoWmJjr7NKgYsdI
+ajwAn1Cw+DuXHRGdFVkm0o/fJz2YatH5
+=8vlr
+-----END PGP SIGNATURE-----
