@@ -4,7 +4,7 @@ GEOIP_MIRROR="http://geolite.maxmind.com/download/geoip/database"
 GEOIPDIR=/usr/share/GeoIP
 TMPDIR=
 
-DATABASES="GeoLiteCity GeoLiteCountry/GeoIP asnum/GeoIPASNum GeoIPv6"
+DATABASES="GeoLiteCity GeoLiteCountry/GeoIP asnum/GeoIPASNum GeoIPv6 GeoLiteCityv6-beta/GeoLiteCityv6"
 
 if [ -d "${GEOIPDIR}" ]; then
 	cd $GEOIPDIR
@@ -17,9 +17,11 @@ if [ -d "${GEOIPDIR}" ]; then
 			fname=$(basename $db)
 
 			wget --no-verbose -t 3 -T 60 "${GEOIP_MIRROR}/${db}.dat.gz" -O "${TMPDIR}/${fname}.dat.gz"
-			gunzip -fdc "${TMPDIR}/${fname}.dat.gz" > "${TMPDIR}/${fname}.dat"
-			mv "${TMPDIR}/${fname}.dat" "${GEOIPDIR}/${fname}.dat"
-			chmod 0644 "${GEOIPDIR}/${fname}.dat"
+			if [ $? -eq 0 ]; then
+				gunzip -fdc "${TMPDIR}/${fname}.dat.gz" > "${TMPDIR}/${fname}.dat"
+				mv "${TMPDIR}/${fname}.dat" "${GEOIPDIR}/${fname}.dat"
+				chmod 0644 "${GEOIPDIR}/${fname}.dat"
+			fi
 		done
 		[ -d "${TMPDIR}" ] && rm -rf $TMPDIR
 	fi
